# themida-spotter-bn

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  clippy.yml
ci/binaryninja-api/: CMakeLists.txt  binaryninjacore.cc  regenerate-api-stubs.sh
src/: lib.rs  themida.rs
